--- a/CodingHelperRest/CodingHelperRest/CodingHelperRest.csproj
+++ b/CodingHelperRest/CodingHelperRest/CodingHelperRest.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +55,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RestUtils.cs" />
+    <Compile Include="VidalDTO\IndicationGroup.cs" />
+    <Compile Include="VidalDTO\GenericGroup.cs" />
+    <Compile Include="VidalDTO\Molecule.cs" />
+    <Compile Include="VidalDTO\Package.cs" />
+    <Compile Include="VidalDTO\Product.cs" />
+    <Compile Include="VidalDTO\ProductDetailAggregate.cs" />
+    <Compile Include="VidalDTO\Reco.cs" />
+    <Compile Include="VidalDTO\VidalClassification.cs" />
+    <Compile Include="VidalDTO\VidalRelatedLink.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
